--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,7 +30,63 @@
 	</tr>
 </table>
 		<div class="commit sansserif">
-			<h2 class="date">10 December 2019</h2>
+			<h2 class="date">21 December 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="maptweak">Добавил дереликт - Исследовательская станция "Мария".</li>
+			</ul>
+			
+			<h2 class="date">20 December 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="maptweak">Добавил новый дереликт - двухпалубный корабль.</li>
+			</ul>
+			
+			<h2 class="date">19 December 2019</h2>
+			<h3 class="author">TermService updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="tweak">Сгоревшие бычки от сигарет теперь сами попадают в пепельницу.</li>
+			<li class="tweak">Добавил анимированный интерфейс при загрузке РиГов.</li>
+			</ul>
+			
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="maptweak">Добавил новый дереликт в виде космо-казино.</li>
+			<li class="maptweak">[Exodus]: Добавил новогодние украшения.</li>
+			</ul>
+			
+			<h2 class="date">17 December 2019</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="bugfix">Пофиксил залезание мартышек в вентиляцию.</li>
+			</ul>
+			
+			<h2 class="date">16 December 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="maptweak">Пофиксил трубы на аванпосту.</li>
+			<li class="maptweak">Добавил кнопки блокировки дверей в дормы аванпоста.</li>
+			<li class="maptweak">На корабль-дереликт теперь сложнее пробраться.</li>
+			<li class="maptweak">Немного поменял окружение аванпоста.</li>
+			<li class="maptweak">Обновил декали на корабле-дереликте.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+			<li class="tweak">Добавил некоторые синди-предметы в теха с очень низким шансом появления.
+			</ul>
+			
+			<h2 class="date">15 December 2019</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">[Eclipse]: Заменил красные шлюзы научного отсека на фиолетовые, синие шлюзы медбея на зелёные.</li>
+				<li class="maptweak">[Eclipse]: Пофиксил множественные проблемы с трубами.</li>
+				<li class="maptweak">[Exodus]: Пофиксил кнопку в оружейной, которую закрывал плакат.</li>
+				<li class="tweak">Понизил шанс брич-ивентов в вирусологии и ксенобиологии в пять раз.</li>
+				<li class="tweak">Слегка поменял шанс других ивентов.</li>
+			</ul>
+
+			<h2 class="date">14 December 2019</h2>
 			<h3 class="author">Epicus updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил автоматические радио-оповещения для офицеров при изменении статуса розыска (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/994">issue #994</a>).</li>
@@ -53,7 +109,6 @@
 				<li class="imageadd">Обновил спрайты костюмов биологической защиты.</li>
 				<li class="bugfix">Починил мусорку в бриге.</li>
 			</ul>
-
 
 			<h2 class="date">10 December 2019</h2>
 			<h3 class="author">Ifromspace updated:</h3>
