--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,7 +30,47 @@
 	</tr>
 </table>
 		<div class="commit sansserif">
-			<h2 class="date">10 December 2019</h2>
+			<h2 class="date">21 December 2019</h2>
+			<h3 class="author">TermService updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил анимированный интерфейс при загрузке РиГов.</li>
+				<li class="tweak">Сгоревшие бычки от сигарет теперь складываются в пепельницу.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавлена новогодняя (и не только!) музыка в джукбокс.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Новая локация: космическое казино.</li>
+				<li class="rscadd">Новая локация: заброшенный двухпалубный корабль.</li>
+				<li class="rscadd">Новая локация: исследовательская станция "Мария".</li>
+				<li class="maptweak">[Exodus]: добавил новогодние украшения.</li>
+				<li class="maptweak">[Exodus]: пофиксил кнопку в оружейной, которую закрывал плакат.</li>
+				<li class="maptweak">[Eclipse]: Заменил красные шлюзы научного отсека на фиолетовые, синие шлюзы медбея на зелёные.</li>
+				<li class="maptweak">[Eclipse]: Пофиксил множественные проблемы с трубами.</li>
+				<li class="maptweak">[Аванпост]: фиксы труб.</li>
+				<li class="maptweak">[Аванпост]: кнопки блокировки дверей для общежития.</li>
+				<li class="maptweak">[Аванпост]: немного поменял окружение.</li>
+				<li class="maptweak">На корабль-дереликт теперь сложнее пробраться.</li>
+				<li class="maptweak">Обновил декали на корабле-дереликте.</li>
+				<li class="tweak">Понизил шанс брич-ивентов в вирусологии и ксенобиологии в пять раз.</li>
+				<li class="tweak">Немного изменил шанс других ивентов.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил некоторые синди-предметы в теха с очень низким шансом появления.</li>
+			</ul>
+
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Мартышки теперь снова могут лазать по вентиляции.</li>
+			</ul>
+
+			<h2 class="date">14 December 2019</h2>
 			<h3 class="author">Epicus updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил автоматические радио-оповещения для офицеров при изменении статуса розыска (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/994">issue #994</a>).</li>
