--- a/html/changelog.html
+++ b/html/changelog.html
@@ -29,7 +29,77 @@
 		</td>
 	</tr>
 </table>
+		
+
 		<div class="commit sansserif">
+			<h2 class="date">9 January 2020</h2>
+			<h3 class="author">KreeperHLC updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил новые эффекты артефактов ксеноархеологии.</li>
+				<li class="tweak">Фикс спрайта разрушенного меха (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/371">issue #371</a>)</li>
+				<li class="tweak">Мокрый пол дольше остаётся мокрым (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1023">issue #1023</a>)</li>
+				<li class="tweak">Удар током теперь стал опаснее, если напряжение в сети большое (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/276">issue #276</a>)</li>
+				<li class="tweak">Трейторы-клоуны теперь могут стрелять из пушек (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1118">issue #1118</a>)</li>
+			</ul>
+
+			<h3 class="author">Plin updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил педалям немного музыки на быстрый набор.</li>
+				<li class="bugfix">Убрал Bag of Holdings из подарков.</li>
+				<li class="bugfix">Вернул обратно звук смены кода тревоги.</li>
+			</ul>
+
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Вернул старый спрайт фуражки ХоСа.</li>
+				<li class="rscadd">Рация теперь помещается в пояс СБ.</li>
+				<li class="maptweak">Пофиксил криво установленную лампу у офиса детектива</li>
+				<li class="maptweak">Переставил консоль управления криоподами в карцерах, теперь должны работать (в теории)</li>
+				<li class="maptweak">Заменил лампы в шлюзах на красные</li>
+				<li class="maptweak">Добавил на аванпост инженерную консоль, пофиксил неработающие планшеты и ноутбуки там же</li>
+				<li class="maptweak">Убрал рантаймящие книги и полки с дереликта</li>
+				<li class="maptweak">Заменил рантаймящие старые коробки с патронами на базе ЕРТ на новые</li>
+				<li class="maptweak">Добавил в бриг три настенных реквест-консоли.</li>
+				<li class="maptweak">Добавил ЕВА-РИГ в, собственно, отсек ЕВА.</li>
+				<li class="maptweak">Налепил немного декалей в отсеке ЕВА.</li>
+				<li class="maptweak">[Eclipse]: Пофиксил не подключенный к сети АПЦ в инженерном.</li>
+				<li class="maptweak">[Eclipse]: Пофиксил направления интеркомов в инженерном.</li>
+				<li class="maptweak">[Eclipse]: Мелкие изменения брига.</li>
+				<li class="maptweak">[Eclipse]: Пофиксил Z-образный бесполезный переход в техах у церкви.</li>
+				<li class="maptweak">[Eclipse]: Поменял некоторые вещи в медблоке, теперь дышать в нем слегка свободнее.</li>
+				<li class="maptweak">[Eclipse]: Слегка изменил отбытие.</li>
+				<li class="maptweak">[Eclipse]: Убрал бесполезные двери посреди научного отсека.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Выпилил генератор случайных чисел "Пинг" из чата, чтобы он перестал ДДОСить сервер (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1082">issue #1082</a>). Сервер теперь должен меньше лагать, ждем вашего фидбека про лаги.</li>
+			</ul>
+
+			<h3 class="author">Vekotov updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Увеличил урон дроби дробовика. Касается только красных патронов со шрапнелью! (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1122">issue #1122</a>)</li>
+			</ul>
+
+			<h3 class="author">TermService updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил электрический стул (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/21">issue #21</a>).</li>
+				<li class="bugfix">Исправил спрайты головных уборов на ящерах.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Откатил механику гниения. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1104">issue #1104</a>).</li>
+				<li class="maptweak">Исправил двери на базе ЕРТ, чтобы они не могли получить экипировку Дедсквада без помощи администраторов.</li>
+				<li class="maptweak">Раздвинул решетки в космосе у церкви, которые мешали сбрасывать трупы.</li>
+				<li class="bugfix">Вернул звук стука по стеклу.</li>
+			</ul>
+
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Оптимизации и проверки для обезьян. Теперь они не смогут ничего достать из закрытого шкафа, сидя в другом закрытом шкафу.</li>
+			</ul>
+
 			<h2 class="date">21 December 2019</h2>
 			<h3 class="author">TermService updated:</h3>
 			<ul class="changes bgimages16">
