--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,13 @@
 		
 
 		<div class="commit sansserif">
+			<h2 class="date">10 January 2020</h2>
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил команду "ping" в консоль, которая пишет чуть менее рандомные числа, чем это было в гунчате.</li>
+				<li class="bugfix">Выпилил красные сообщения о дисконнектах, которые писались не по делу.</li>
+			</ul>
+
 			<h2 class="date">9 January 2020</h2>
 			<h3 class="author">KreeperHLC updated:</h3>
 			<ul class="changes bgimages16">
