--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,7 +32,28 @@
 		
 
 		<div class="commit sansserif">
-			<h2 class="date">14 February 2020</h2>
+			<h2 class="date">18 February 2020</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Фикс проебанной трубы скрабберов в техах медблока</li>
+				<li class="maptweak">Фикс проебанной транспортной трубы в медблоке</li>
+				<li class="maptweak">Фикс не того типа стен в гетто</li>
+				<li class="maptweak">Фикс застревающего шлюза синдишаттла</li>
+				<li class="maptweak">Фикс странных проводов АПЦ рядом с синдишаттлом</li>
+				<li class="maptweak">Фикс болтов на изоляторах в медбее</li>
+				<li class="maptweak">Фикс дырки в полу</li>
+				<li class="maptweak">Фикс проебанной зоны в техах научного</li>
+				<li class="maptweak">Добавил створки на входную дверь геттомедбея</li>
+				<li class="maptweak">Добавил створки на окна изоляторов и геттомедбея</li>
+				<li class="maptweak">Добавил двери в теха инженерного</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил логи рантаймов в хабе.</li>
+			</ul>
+
+			<h2 class="date">17 February 2020</h2>
 			<h3 class="author">Hekko4 updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил педалям профайлер.</li>
