--- a/html/changelog.html
+++ b/html/changelog.html
@@ -32,6 +32,32 @@
 		
 
 		<div class="commit sansserif">
+			<h2 class="date">19 February 2020</h2>
+			<h3 class="author">TatarTheBuilder updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Баффнул индустриальный риг. Уменьшил ограничения видимости, увеличил скорость и резисты к разным типам урона.</li>
+				<li class="maptweak">Перенес отделы ксеноисследований на нижний уровень станции.</li>
+				<li class="maptweak">Различные мелкие фиксы после недавних обновлений.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил операционному столу специальный верб, который позволяет быстро раздевать людей на нем. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1446">issue #1446</a>)</li>
+				<li class="tweak">Вместо ПРОВАЛОВ при операции над закрытыми одеждой частями тела операция теперь просто блокируется.</li>
+				<li class="bugfix">Исправил показываемое название органа на котором находится мешающая проведению операции одежда. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1357">issue #1357</a>)</li>
+			</ul>
+
+			<h3 class="author">quardbreak updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил уведомление о рестарте в чат.</li>
+				<li class="bugfix">Починил отображение ссылок в чате. Теперь они должны нормально подчеркиваться и кликаться.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Пофиксил падение сервера из-за диалоговых облачков.</li>
+			</ul>
+
 			<h2 class="date">18 February 2020</h2>
 			<h3 class="author">TatarTheBuilder updated:</h3>
 			<ul class="changes bgimages16">
