--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,12 +33,36 @@
 		
 
 		<div class="commit sansserif">
+			<h2 class="date">4 March 2020</h2>
+			
+			<p><font size='2'><b>Stability Update.</b> В это обновление попало множество мелких технических исправлений, направленных на стабильность сервера, а также фиксы критических багов, вылезших после недавнего обновления. Если в последние пару дней вы испытывали какие-то новые проблемы, то они должны были решиться.</font></p>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Согласно решению совета ограничил подключение к серверу с бета-версией BYOND. Теперь на наши сервера можно зайти только со стабильной версией v512.1488.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил возможность обойти лимит онлайна сервера для игроков, которые уже играют в раунде живыми персонажами. Однако количество таких игроков тоже ограничено. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1445">issue #1445</a>)</li>
+				<li class="tweak">Генокрад теперь высасывает реагенты вместе с кровью из своей жертвы. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1585">issue #1585</a>)</li>
+				<li class="tweak">Способность "Rapid Regeneration" теперь не может стаковаться, также она занерфана в два раза в целях баланса. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1065">issue #1065</a>)</li>
+				<li class="tweak">Способность "Finger Lockpick" приобретает задержку в десять секунд после каждого использования. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1064">issue #1064</a>)</li>
+				<li class="bugfix">Ревайв генокрада больше не будет возвращать протезированные конечности.</li>
+				<li class="bugfix">Убрал ограничение возраст аккаунта при конверте в революционеров/лоялистов. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1515">issue #1515</a>, <a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1360">issue #1360</a>)</li>
+				<li class="bugfix">Добавил проверку, которая больше не даст проводить операции над мертвыми органами. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/583">issue #583</a>)</li>
+			</ul>
+
+			<h3 class="author">MemoryDreams updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил ингейм-руководство по химии.</li>
+			</ul>
+
 			<h2 class="date">1 March 2020</h2>
 			<h3 class="author">Epicus updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">Добавил уникальные цвета никнеймов в OOC для <a href="https://www.patreon.com/chaoticonyx">игроков, которые поддерживают сервер через Патреон</a>. (<a href="https://github.com/ChaoticOnyx/OnyxBay/issues/1007">issue #1007</a>)</li>
 			</ul>
-
 
 			<h3 class="author">quardbreak updated:</h3>
 			<ul class="changes bgimages16">
