--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,31 @@
 		
 
 		<div class="commit sansserif">
+			<h2 class="date">26 March 2020</h2>
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил недостающее сообщение при использовании Bone Mender в одной операции.</li>
+			</ul>
+
+			<h3 class="author">quardbreak updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Переделал полный экран, теперь он является частью пользовательских настроек, а также имеет вариант без статус бара.</li>
+				<li class="tweak">Подправил меню в лобби, теперь оно будет обновляться после начала раунда.</li>
+				<li class="rscdel">Удалил бесполезный, а также нагружающий соединение tooltip.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="wip">В целях оптимизации портировал новую систему близости. При обнаружении багов у объектов, что должны реагировать на близость и/или же передвижение - просьба создать соответствующий репорт на гитхабе.</li>
+				<li class="rscadd">Добавил работающий генератор гравитации на нижнем уровне. С генератором гравитации можно взаимодействовать, перерезывать провода и просто-напросто ломать при помощи огнестрельного оружия.</li>
+				<li class="tweak">Изменил эффект засовывания одного bag of holding в другой на новый, уникальный и неповторимый.</li>
+				<li class="tweak">Изменил APC, теперь его можно перезапустить без разблокировки, если у Вас конечно же есть к нему доступ.</li>
+				<li class="tweak">Изменил ручные телепортеры, теперь их опасно использовать, потому как теперь есть шанс оказаться на другом конце галактики. Для безопасного использования стационарных телепортеров теперь их нужно калибровать при помощи кнопки Calibrate Teleporter.
+				<li class="balance">Сбалансировал мышей, теперь они не такие опасные. Также в целях баланса была убрана кнопка Become Mouse у призраков. А для того, чтобы взять под свой контроль какую-либо мышь - воспользуйтесь кнопкой Ghost Possess.</li>
+				<li class="bugfix">Исправил раздатчик киборгов, который при пожирании ящиков телепортировал всё его содержимое в нулевое пространство.</li>
+				<li class="bugfix">Исправил урон при наступании на огромное количество осколков, теперь он не будет таким бешеным.</li>
+			</ul>
+
 			<h2 class="date">24 March 2020</h2>
 			<h3 class="author">TermService updated:</h3>
 			<ul class="changes bgimages16">
