--- a/html/changelog.html
+++ b/html/changelog.html
@@ -33,6 +33,81 @@
 		
 
 		<div class="commit sansserif">
+			<h2 class="date">12 April 2020</h2>
+			<h3 class="author">Ifromspace updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Вернул гарантированное образование сингулярности при помещении Bag of Holding внутрь другого Bag of Holding.</li>
+			</ul>
+
+			<h3 class="author">Rodial updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Добавил возврат диска от нюки на станцию (если он сможет её покинуть) при любом сценарии. Теперь спрятать его на дереликте или астероиде не получится.</li>
+			</ul>
+
+			<h3 class="author">Animesku updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил отображение ballistic arm guards, формальной униформы ассистентов и некоторых платьев из лодаута на тонкоспрайтах.</li>
+			</ul>
+
+			<h3 class="author">Shirlineyn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Починил кухонные приборы. Теперь можно спокойно готовить deep fried cheese.</li>
+				<li class="tweak">Изменил необходимый доступ для открытия заказного ящика с вирусами из карго. Теперь вирусологам не придётся каждый раз искать для этого СМО.</li>
+				<li class="tweak">Изменил дальность броска скомканного листа бумаги.</li>
+				<li class="maptweak">Добавил хирургические наборы на базу ЕРТ.</li>
+			</ul>
+
+			<h3 class="author">Auesti updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Убрал звук стакана при поднятии тряпки.</li>
+			</ul>
+
+			<h3 class="author">AmiClerick updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил время взрыва гранат выпущенные из гранатомёта РиГа с пяти до одной секунды.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Починил безгравитационные зоны космоса внутри первой хирургии.</li>
+				<li class="bugfix">Починил панель подтверждения в кабинетах глав, которая была сломана в результате попытки её починить.</li>
+				<li class="tweak">Сохранил микросекунду серверного времени оптимизацией регекса в чате.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил баг с возможностью положить сервер через переполнение очереди протолата.</li>
+				<li class="bugfix">Убрал взаимодействие киборгов и ИИ с ядерной боеголовкой на любом расстоянии. Теперь им надо подходить к ней вплотную.</li>
+			</ul>
+
+			<h3 class="author">Dnivji updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Добавил комнате технических тоннелей под отбытием защиту от радиации.</li>
+				<li class="maptweak">Исправил давление насоса на астероиде.</li>
+				<li class="maptweak">Поменял один из сломанных mahcine frame'ов в гетто на рабочий.</li>
+				<li class="maptweak">Поменял пустые баки с водой на базе торговцев на обычные.</li>
+			</ul>
+
+			<h3 class="author">Epicus updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Оптимизировал работу боли, чтобы она не отнимала так много серверного времени.</li>
+				<li class="bugfix">Исправил баг со спамом подтверждения получения ассетов клиенту.</li>
+				<li class="bugfix">Подправил остановку отправки ассетов отключившимся клиентам.</li>
+				<li class="bugfix">Исправил работу слота костюма.</li>
+			</ul>
+
+			<h3 class="author">TermService updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">По умолчанию отключил работу харддела.</li>
+				<li class="bugfix">Исправил частоту обновления солнечных панелей.</li>
+				<li class="bugfix">Исправил рантайм при работе who.</li>
+			</ul>
+			
+			<h3 class="author">DeltaEpsilon updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Исправил слишком частое обновление зон при работе АПЦ.</li>
+			</ul>
+
 			<h2 class="date">26 March 2020</h2>
 			<h3 class="author">TapKo4eB updated:</h3>
 			<ul class="changes bgimages16">
