--- a/html/changelog.html
+++ b/html/changelog.html
@@ -49,6 +49,11 @@
 				<li class="bugfix">Починил отображение ballistic arm guards, формальной униформы ассистентов и некоторых платьев из лодаута на тонкоспрайтах.</li>
 			</ul>
 
+			<h3 class="author">LegatePritcher updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Портировал разнообразные шарфы с AuroraBlue в лодаут. "Теперь Ваш фэшн воистину может стать Вашим профэшеном, да."</li>
+			</ul>
+
 			<h3 class="author">Shirlineyn updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Починил кухонные приборы. Теперь можно спокойно готовить deep fried cheese.</li>
