--- a/html/changelog.html
+++ b/html/changelog.html
@@ -65,6 +65,7 @@
 			<h3 class="author">Auesti updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="bugfix">Убрал звук стакана при поднятии тряпки.</li>
+				<li class="bugfix">Исправил возможность употреблять пищу через надетые маски.</li>
 			</ul>
 
 			<h3 class="author">AmiClerick updated:</h3>
