--- a/html/changelog.html
+++ b/html/changelog.html
@@ -31,8 +31,46 @@
 	</tr>
 </table>
 		
-
+		
 		<div class="commit sansserif">
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">MalinaGirl updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="maptweak">Добавлена карта для геймподов виртуальной реальности</li>
+		</ul>
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">TermService updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscadd">Добавлен персональный голопад, доступен для изучения в РнД</li>
+			<li class="experiment">Добавлен игровой геймпод виртуальной реальности</li>
+		</ul>
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">Gunter updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscadd">Добавлена канистра кислорода в ксенофлору</li>
+		</ul>
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">Ershovdi updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="rscadd">Если наступить на мышку, она может укусить</li>
+		</ul>
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">Auesti updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Алмазный бур для мехов теперь добывает ресурсы с 3 тайлов, обычный с 1го</li>
+		</ul>
+
+		<h2 class="date">14 April 2020</h2>
+		<h3 class="author">AmiClerick updated:</h3>
+		<ul class="changes bgimages16">
+			<li class="bugfix">Свечи можно зажечь с помощью горящих предметов, а не только спичкой</li>
+		</ul>
+
 			<h2 class="date">12 April 2020</h2>
 			<h3 class="author">Ifromspace updated:</h3>
 			<ul class="changes bgimages16">
