--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,6 +34,24 @@
 		
 		<div class="commit sansserif">
 
+			<h2 class="date">day month year</h2>
+			<h3 class="author">Maxsc updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил иновационную систему предупреждений для новых игроков при первых попытках зайти в игру или поиграть на главах.</li>
+			</ul>
+
+			<h3 class="author">TapKo4eB updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Адекватно настроил транспортную трубу у комнаты ВРа. Больше никакого сломанного мусоропровода из брига.</li>
+				<li class="bugfix">Исправил пожилой баг с неправильным отображением экипажа на карте crew monitor'а.</li>
+				<li class="tweak">Обновил используемую в различных консольных программах карту станции.</li>
+			</ul>
+
+			<h3 class="author">Ershovdi updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Запретил выдачу ролей автоантагом для симплмобов. Хватит с нас мышей трейторов.</li>
+			</ul>
+
 			<h2 class="date">14 April 2020</h2>
 			<h3 class="author">MalinaGirl updated:</h3>
 			<ul class="changes bgimages16">
