--- a/html/changelog.html
+++ b/html/changelog.html
@@ -34,10 +34,10 @@
 		
 		<div class="commit sansserif">
 
-			<h2 class="date">day month year</h2>
+			<h2 class="date">22 April 2020</h2>
 			<h3 class="author">Maxsc updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">Добавил иновационную систему предупреждений для новых игроков при первых попытках зайти в игру или поиграть на главах.</li>
+				<li class="rscadd">Добавил инновационную систему предупреждений для новых игроков при первых попытках зайти в игру или поиграть на главах.</li>
 			</ul>
 
 			<h3 class="author">TapKo4eB updated:</h3>
@@ -50,6 +50,22 @@
 			<h3 class="author">Ershovdi updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Запретил выдачу ролей автоантагом для симплмобов. Хватит с нас мышей трейторов.</li>
+			</ul>
+
+			<h3 class="author">Hekko4 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Запретил использование механики телепортации телекристаллами на не игровых уровнях.</li>
+			</ul>
+
+			<h3 class="author">Doster-d updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Убрал старинную, сломанную беевскую лор панель, что выскакивала при первых подключениях к серверу.</li>
+			</ul>
+
+			<h3 class="author">Wuattt updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Добавил в каталог жукбокса Space Oddity.</li>
+				<li class="tweak">Изменил количество стартовых ДНК очков генокрада с 15 до 10.</li>
 			</ul>
 
 			<h2 class="date">14 April 2020</h2>
